--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec babel-node ./index.js",
-    "start": "babel-node ./dist/index.js",
+    "start": "node ./dist/index.js",
     "build": "babel ./index.js -d dist"
   },
   "author": "",
