--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec babel-node ./index.js",
+    "dev": "nodemon --exec babel-node ./src/index.js",
     "start": "node ./dist/index.js",
-    "build": "babel ./index.js -d dist"
+    "build": "babel ./src -d dist"
   },
   "author": "",
   "license": "ISC",
